Replaced guest with away

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     </div>
                 </div>
             </div> 
-            <div class = "guest">
-                <h3>GUEST</h3>
-                <h1 id = "guest-score">0</h1>
-                <div class = "guest-buttons">
+            <div class = "away">
+                <h3>AWAY</h3>
+                <h1 id = "away-score">0</h1>
+                <div class = "away-buttons">
                     <div>
                         <button id = "button" onclick="addAwayScore(1)">+1</button>
                     </div>
